# Robotics

ex01/: commands.txt  ex01.txt  last_transform.txt  ros-humble-ros-workspace_activate.sh  transform.txt
ex01/service_full_name/: package.xml
ex02/: carrot.rviz  package_path_ros2topic.txt  robot_depth_camera.launch.py
ex02/action_turtle_commands/: setup.py
ex02/action_turtle_commands/action_turtle_commands/: client.py  server.py
ex02/tf2_and_carrot/: package.xml  setup.cfg  setup.py
ex02/tf2_and_carrot/launch/: turtles_and_carrot.launch.py
ex02/tf2_and_carrot/tf2_and_carrot/: dynamic_frame_tf2_broadcaster.py  turtle_tf2_listener.py
ex03/: pose_speed_x2.yaml  turtle_cmd_vel_0.mcap
ex03/my_package/: package.xml  setup.py
ex03/travelling_in_time/: package.xml  setup.cfg  setup.py
ex03/travelling_in_time/launch/: mimic_with_delay.launch.py
ex04/: colcon_build.txt  doctor.txt
ex04/lidar_stop/: package.xml  setup.py
ex04/lidar_stop/launch/: start.launch.py
ex05/: rosnode_info.txt  rosnode_list.txt
ex05/depth_camera_stop/: package.xml  setup.cfg  setup.py
ex05/move_to_goal/: package.xml  setup.py
ex06/: cmd_vel.txt
ex08/: rqt_console.csv
ex09/new_message_type_package/: CMakeLists.txt  package.xml
ex10/text_to_cmd_vel/: package.xml  setup.py
task3/ex03/: pose_speed_x1.yaml
task5/: robot.sdf
task5/ex01/: robot.sdf  robot.urdf  robot.urdf.xacro  robot_display.launch.py
task5/ex02/: robot.urdf.xacro  robot_display.launch.py
task5/ex03/: robot.gazebo.urdf  robot.gazebo.xacro  robot.sdf  robot.urdf  robot.urdf.xacro
(+14 files in other folders)
